fix(ravengard): ability slots, some cleanups